# booKzon

./: .gitignore  README.md  db.sqlite3  db.sqlite3-journal  pyproject.toml  requirements.txt
API/: .gitignore  models.py  serializer.py  tests.py  urls.py  views.py
API/migrations/: 0001_initial.py  0002_books_price.py  0003_remove_books_price.py  0004_books_books.py  0005_remove_books_books_remove_books_name_books_book_id_and_more.py
Backend/: settings.py  urls.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  context.js  index.css  index.js
frontend/src/components/: Book.js  BooksList.js  Navbar.js  SearchForm.js
frontend/src/pages/: About.js  Error.js  Home.js  Recommendations.js  SingleBook.js
