[tool.poetry]
name = "bookzon"
version = "0.1.0"
description = ""
authors = ["Kavya Dua <kavyadua03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.4"
react = "^4.3.0"
router = "^0.1"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
